--- a/src/com/westga/cs3211/prescription_app/view/Dashboard.fxml
+++ b/src/com/westga/cs3211/prescription_app/view/Dashboard.fxml
@@ -8,7 +8,7 @@
 <AnchorPane minHeight="600.0" minWidth="400.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.westga.cs3211.prescription_app.view.Dashboard">
    <children>
       <ListView fx:id="prescriptionListView" layoutX="14.0" layoutY="57.0" prefHeight="494.0" prefWidth="374.0" />
-      <Button fx:id="addButton" layoutX="50.0" layoutY="21.0" mnemonicParsing="false" onAction="#addPrescription" text="Add">
+      <Button fx:id="addButton" layoutX="50.0" layoutY="21.0" mnemonicParsing="false" onAction="#openNewMedDialog" text="Add">
          <font>
             <Font size="14.0" />
          </font>
