--- a/src/com/westga/cs3211/prescription_app/view/UpdateMed.fxml
+++ b/src/com/westga/cs3211/prescription_app/view/UpdateMed.fxml
@@ -21,7 +21,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField id="name" fx:id="name" layoutX="214.0" layoutY="19.0" />
+            <TextField id="name" fx:id="name" editable="false" layoutX="214.0" layoutY="19.0" />
             <Label layoutX="66.0" layoutY="58.0" text="Current Dosage Count">
                <font>
                   <Font size="14.0" />
@@ -40,9 +40,9 @@
                </font>
             </Label>
             <TextField fx:id="dosesPerRefill" layoutX="214.0" layoutY="121.0" />
-            <CheckBox fx:id="avoidDrivingCheck" layoutX="22.0" layoutY="168.0" mnemonicParsing="false" text="Don't take while driving" />
-            <CheckBox fx:id="withoutAlcoholCheck" layoutX="22.0" layoutY="151.0" mnemonicParsing="false" text="Don't take with Alcohol" />
-            <CheckBox fx:id="withFoodCheck" layoutX="214.0" layoutY="159.0" mnemonicParsing="false" text="Take with Food" />
+            <CheckBox fx:id="avoidDrivingCheck" disable="true" layoutX="22.0" layoutY="168.0" mnemonicParsing="false" text="Don't take while driving" />
+            <CheckBox fx:id="withoutAlcoholCheck" disable="true" layoutX="22.0" layoutY="151.0" mnemonicParsing="false" text="Don't take with Alcohol" />
+            <CheckBox fx:id="withFoodCheck" disable="true" layoutX="214.0" layoutY="159.0" mnemonicParsing="false" text="Take with Food" />
          </children>
       </Pane>
       <Separator layoutX="1.0" layoutY="202.0" prefHeight="3.0" prefWidth="400.0" />
