--- a/src/com/westga/cs3211/prescription_app/view/UpdateMed.fxml
+++ b/src/com/westga/cs3211/prescription_app/view/UpdateMed.fxml
@@ -2,9 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -46,66 +45,13 @@
          </children>
       </Pane>
       <Separator layoutX="1.0" layoutY="202.0" prefHeight="3.0" prefWidth="400.0" />
-      <Pane layoutX="4.0" layoutY="203.0" prefHeight="211.0" prefWidth="392.0">
-         <children>
-            <Label layoutX="76.0" layoutY="14.0" text="Select day and time to take precription">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <CheckBox fx:id="monday" layoutX="47.0" layoutY="45.0" mnemonicParsing="false" text="Monday">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </CheckBox>
-            <CheckBox fx:id="tuesday" layoutX="152.0" layoutY="45.0" mnemonicParsing="false" text="Tuesday">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </CheckBox>
-            <CheckBox fx:id="wednesday" layoutX="256.0" layoutY="45.0" mnemonicParsing="false" text="Wednesday">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </CheckBox>
-            <CheckBox fx:id="thursday" layoutX="25.0" layoutY="78.0" mnemonicParsing="false" text="Thursday">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </CheckBox>
-            <CheckBox fx:id="friday" layoutX="119.0" layoutY="78.0" mnemonicParsing="false" text="Friday">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </CheckBox>
-            <CheckBox fx:id="saturday" layoutX="196.0" layoutY="78.0" mnemonicParsing="false" text="Saturday">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </CheckBox>
-            <CheckBox fx:id="sunday" layoutX="291.0" layoutY="79.0" mnemonicParsing="false" text="Sunday">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </CheckBox>
-            <Label layoutX="33.0" layoutY="112.0" text="Hour" />
-            <TextField fx:id="hour" layoutX="31.0" layoutY="133.0" prefHeight="20.0" prefWidth="32.0" />
-            <Label layoutX="89.0" layoutY="112.0" text="Minute" />
-            <TextField fx:id="minute" layoutX="90.0" layoutY="133.0" prefHeight="25.0" prefWidth="32.0" />
-            <RadioButton fx:id="am" layoutX="27.0" layoutY="175.0" mnemonicParsing="false" text="AM" />
-            <RadioButton fx:id="pm" layoutX="87.0" layoutY="175.0" mnemonicParsing="false" text="PM" />
-            <Button layoutX="138.0" layoutY="120.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" text="+" />
-            <Button layoutX="138.0" layoutY="153.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" text="-" />
-            <ListView layoutX="175.0" layoutY="109.0" prefHeight="89.0" prefWidth="200.0" />
-         </children>
-      </Pane>
-      <Separator layoutY="413.0" prefHeight="3.0" prefWidth="400.0" />
-      <Label layoutX="164.0" layoutY="414.0" text="Instructions">
+      <Separator layoutY="375.0" prefHeight="3.0" prefWidth="400.0" />
+      <Label layoutX="164.0" layoutY="385.0" text="Instructions">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextArea fx:id="instructions" layoutX="43.0" layoutY="443.0" prefHeight="89.0" prefWidth="315.0" />
+      <TextArea fx:id="instructions" layoutX="43.0" layoutY="407.0" prefHeight="125.0" prefWidth="315.0" />
       <Button fx:id="updateBtn" cancelButton="true" layoutX="105.0" layoutY="543.0" mnemonicParsing="false" onAction="#updatePrescription" text="Update">
          <font>
             <Font size="14.0" />
@@ -116,5 +62,45 @@
             <Font size="14.0" />
          </font>
       </Button>
+      <DatePicker fx:id="updatedDate" layoutX="192.0" layoutY="221.0" />
+      <Label layoutX="36.0" layoutY="225.0" text="Day to start Prescription">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="hour" layoutX="191.0" layoutY="255.0" prefHeight="25.0" prefWidth="27.0" />
+      <Label layoutX="154.0" layoutY="259.0" text="Time">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="224.0" layoutY="258.0" text=":">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="minute" layoutX="232.0" layoutY="255.0" prefHeight="25.0" prefWidth="27.0" />
+      <Label layoutX="279.0" layoutY="259.0" text="Use 24 hour clock">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="61.0" layoutY="315.0" text="Take Prescription every">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Button fx:id="upButton" layoutX="205.0" layoutY="291.0" mnemonicParsing="false" onAction="#increaseIterationDays" prefHeight="17.0" prefWidth="24.0" text="˄" />
+      <Button fx:id="downButton" layoutX="205.0" layoutY="336.0" mnemonicParsing="false" onAction="#decreaseIterationDays" prefHeight="17.0" prefWidth="24.0" text="˅" />
+      <Label fx:id="interationDays" layoutX="213.0" layoutY="316.0" prefHeight="20.0" prefWidth="12.0" text="1">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="232.0" layoutY="316.0" text="days">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
