--- a/src/com/westga/cs3211/prescription_app/view/Reminders.fxml
+++ b/src/com/westga/cs3211/prescription_app/view/Reminders.fxml
@@ -8,12 +8,17 @@
 <AnchorPane minHeight="600.0" minWidth="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.westga.cs3211.prescription_app.view.Reminders">
    <children>
       <ListView fx:id="remindersListView" layoutX="14.0" layoutY="57.0" prefHeight="494.0" prefWidth="374.0" />
-      <Button fx:id="viewInstructionsButton" layoutX="44.0" layoutY="560.0" mnemonicParsing="false" onAction="#openInstructionsWindow" text="View Instructions">
+      <Button fx:id="viewInstructionsButton" layoutX="6.0" layoutY="560.0" mnemonicParsing="false" onAction="#openInstructionsWindow" text="View Instructions">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button fx:id="confirmMedTakenButton" layoutX="214.0" layoutY="560.0" mnemonicParsing="false" onAction="#confirmMedTaken" text="Confirm Med Taken">
+      <Button fx:id="confirmMedTakenButton" layoutX="140.0" layoutY="560.0" mnemonicParsing="false" onAction="#confirmMedTaken" text="Confirm Med Taken">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Button fx:id="makeInactiveButton" layoutX="288.0" layoutY="560.0" mnemonicParsing="false" onAction="#makeMedInactive" text="Make Inactive">
          <font>
             <Font size="14.0" />
          </font>
